--- a/manifest.json
+++ b/manifest.json
@@ -31,6 +31,11 @@
   	"sizes":"512x512", 
   	"type": "image/png", 
   	"purpose": "any"
+  }, {
+  	"src": "images/hello-icon-196maskable.png", 
+  	"sizes":"196x196", 
+  	"type": "image/png", 
+  	"purpose": "any maskable"
   }],
   "start_url": "/PWA00NAL/index.html",
   "display": "standalone",
